# src/controllers/UserController.js
@@ -137,6 +137,7 @@ var UserController = /** @class */ (function () {
      *                 description: Role of the user
      *                 default: explorer
      *             example:
+     *               name: john doe
      *               email: john.doe@example.com
      *               password: mypassword
      *               accountStatus: true
@@ -179,6 +180,9 @@ var UserController = /** @class */ (function () {
      *           schema:
      *             type: object
      *             properties:
+     *               name:
+     *                 type: string
+     *                 description: Updated name of the user
      *               email:
      *                 type: string
      *                 description: Updated email address of the user
