# swagger.json
@@ -857,6 +857,7 @@
                   }
                 },
                 "example": {
+                  "name": "john doe",
                   "email": "john.doe@example.com",
                   "password": "mypassword",
                   "accountStatus": true,
@@ -922,6 +923,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "name": {
+                    "type": "string",
+                    "description": "Updated name of the user"
+                  },
                   "email": {
                     "type": "string",
                     "description": "Updated email address of the user"
